force-app/main/default/objects/External_Account__x.object
<CustomObject>
    <externalDataSource>ExternalAccountDataSource</externalDataSource>
    <externalName>Account</externalName>
    <label>External Account</label>
    <pluralLabel>External Accounts</pluralLabel>
    <fields>
        <fullName>Erp_Id__c</fullName>
        <externalId>true</externalId>
        <label>Erp Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>